@@ -83,8 +83,8 @@ void warnx(char *m1, char *m2, char *m3) {
 
 void stopservice(struct svdir *);
 
-void s_child() { write(selfpipe[1], "", 1); }
-void s_term() {
+void s_child(int unused) { write(selfpipe[1], "", 1); }
+void s_term(int unused) {
   sigterm =1;
   write(selfpipe[1], "", 1); /* XXX */
 }
