@@ -1,3 +1,9 @@
+  * alloc.h, buffer.c, buffer.h, buffer_get.c, buffer_put.c, buffer_write.c,
+    byte.h, pathexec_env.c, runit.c, runsv.c, runsvdir.c, select.h1,
+    select.h2, sig.c, sig.h, sig_catch.c, svlogd.c, svlogd.dist, wait.h:
+    fix build with gcc15: in C23 f() means f(void), consequently signal
+    handler functions now are f(int), alloc_free() parameter needs cast,
+    buffer_unixwrite() removes "const" from parameter.
   * utmpset.c: check length of line argument to match struct utmp; properly
     handle line argument with max length (thx github/Skyb0rg007).
   * doc/index.html: add reference to repository on github.com.
